--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,27 @@
 } */
 
 
+.openformdiv{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.openform{
+  color: #f9f9f9;
+  background-color: blue;
+
+}
 
 
 .app {
   text-align: center;
   margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .modal {
@@ -80,7 +96,7 @@ input {
 .submit-button {
   width: 100%;
   padding: 10px;
-  background-color: #4CAF50;
+  background-color: blue;
   color: white;
   border: none;
   border-radius: 3px;
